# agent-skills

./: README.md  matriks-iq-uzmani_extracted.json  pdf-uzmani_extracted.json
bist-hisse-analizi/: SKILL.md
bist-hisse-analizi-v2/: SKILL.md
bist-hisse-analizi-v2/scripts/: analyze_stock.py
chart-patterns-uzmani/: SKILL.md  chart_patterns_rehber.md  chart_patterns_rehber_v3.md  super_chart_patterns.md
deep-analysis-mode/: SKILL.md  prompt.txt
deger-avcisi/: SKILL.md
fpdf2-uzmani/: SKILL.md
fpdf2-uzmani_data/: summary.json
grid-avcisi/: SKILL.md
hisse-analiz-uzmani/: SKILL.md
hisse-tarama-uzmani/: SKILL.md
matriks-iq-uzmani/: SKILL.md
matriks-system-tester/: SKILL.md
pdf-uzmani/: SKILL.md
pinescript-v6-uzmani/: README.md  concepts.md  faq.md  getting-started.md  language.md  pinescript_v6_rehber.md  pinescript_v6_syntax_kurallari.md  recipes.md  welcome.md
precise-patterns-forked/: README.md  pyproject.toml
precise-patterns-forked/docs/source/: aggregators.rst  conf.py  core.rst  index.rst  patterns.rst  reader.rst
precise-patterns-forked/precise_patterns/: aggregator.py  doubly_linked_list.py  dtypes.py  events.py  patterns.py  pivots.py
precise-patterns-forked/precise_patterns/base/: aggregator.py  pattern.py  pivot.py
precise-patterns-forked/precise_patterns/readers/: csv.py
precise-patterns-forked/precise_patterns/storage/: csv.py
precise-patterns-forked/tests/: context.py  helpers.py  test_candle_builder.py  test_eod_aggregator.py  test_minmax.py  test_minute_aggregator.py
price-action-uzmani/: SKILL.md
(+142 files in other folders)
